@@ -1,4 +1,4 @@
-README - 07/21/2003
+README - 07/22/2003
 -------------------
 
 
@@ -106,6 +106,23 @@ DOCUMENTATION
 	fp = fopen("filename.xml", "w");
 	mxmlSaveFile(tree, fp, MXML_NO_CALLBACK);
 	fclose(fp);
+
+    The "mxmlLoadString()", "mxmlSaveAllocString()", and
+    "mxmlSaveString()" functions load XML node trees from and
+    save XML node trees to strings:
+
+        char buffer[8192];
+	char *ptr;
+	mxml_node_t *tree;
+
+        ...
+	tree = mxmlLoadString(NULL, buffer, MXML_NO_CALLBACK);
+
+        ...
+        mxmlSaveString(tree, buffer, sizeof(buffer), MXML_NO_CALLBACK);
+
+        ...
+	ptr = mxmlSaveAllocString(tree, MXML_NO_CALLBACK);
 
     You can find a named element/node using the
     "mxmlFindElement()" function:
